k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cinevision-dev
  labels:
    name: cinevision-dev
    environment: development
