k8s/dev/email-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: cinevision-dev
  labels:
    app: emailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
      - name: emailservice
        image: 590396427103.dkr.ecr.us-east-1.amazonaws.com/cinevision/emailservice:latest
        ports:
        - containerPort: 8083
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: cinevision-dev
spec:
  selector:
    app: emailservice
  ports:
  - port: 8083
    targetPort: 8083
  type: ClusterIP
