k8s/dev/movie-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
  namespace: cinevision-dev
  labels:
    app: movie-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
      - name: movie-service
        image: 781863585922.dkr.ecr.us-east-1.amazonaws.com/cinevision/movieservice:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: cinevision-dev
spec:
  selector:
    app: movie-service
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
